--- a/end-file.ipynb
+++ b/end-file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "[953 rows x 24 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "'static/top_songs_2023.png'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,9 +455,11 @@
     "    df: DataFrame\n",
     "    year: int\n",
     "    \"\"\"\n",
-    "    year= 2023\n",
     "    top_songs = df[df['released_year'] == year][['track_name', 'streams']].sort_values('streams', ascending=False).head()\n",
-    "\n",
+    "    \n",
+    "    df['streams'] = pd.to_numeric(df['streams'], errors='coerce')\n",
+    "    df = df.dropna(subset=['streams'])\n",
+    "    \n",
     "    plt.figure(figsize=(15, 8))\n",
     "    sns.set(style='whitegrid')\n",
     "\n",
@@ -486,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +504,7 @@
        "'static/top_artists_2023.png'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +561,7 @@
        "'static/top_artists.png'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,6 +573,9 @@
     "    \"\"\"\n",
     "    top_artists = df.groupby('artist(s)_name').agg({'streams':'sum'}).reset_index().sort_values('streams', ascending=False).head()\n",
     "\n",
+    "    df['streams'] = pd.to_numeric(df['streams'], errors='coerce')\n",
+    "    df = df.dropna(subset=['streams'])\n",
+    "    \n",
     "    plt.figure(figsize=(15, 8))\n",
     "    sns.set(style='whitegrid')\n",
     "\n",
@@ -597,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +611,7 @@
        "'static/overall_top_songs.png'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,6 +622,9 @@
     "    df: DataFrame\n",
     "    \"\"\"\n",
     "    top_songs = df[['track_name', 'streams']].sort_values('streams', ascending=False).head()\n",
+    "    \n",
+    "    df['streams'] = pd.to_numeric(df['streams'], errors='coerce')\n",
+    "    df = df.dropna(subset=['streams'])\n",
     "\n",
     "    plt.figure(figsize=(15, 8))\n",
     "    sns.set(style='whitegrid')\n",
